[gd_scene load_steps=21 format=3 uid="uid://bew6pidcrlta5"]

[ext_resource type="PackedScene" uid="uid://16vyplhdnkwh" path="res://Scenes/bg_template.tscn" id="1_70xfw"]
[ext_resource type="Script" path="res://Levels/01_MainMenu/Scripts/MainMenu.gd" id="1_xeh46"]
[ext_resource type="PackedScene" uid="uid://buura1bhddf8t" path="res://Scenes/tweets.tscn" id="2_3yv4w"]
[ext_resource type="PackedScene" uid="uid://bbnlopshd2g3b" path="res://Levels/02_Story/StoryMode.tscn" id="2_ub1xv"]
[ext_resource type="AudioStream" uid="uid://r1e688iijjl4" path="res://Sound/awful.mp3" id="3_cyb41"]
[ext_resource type="FontFile" uid="uid://hjtao544kf0n" path="res://Fonts/Poppins/Poppins-Medium.ttf" id="3_urr22"]
[ext_resource type="PackedScene" uid="uid://7h0klk321uda" path="res://Scenes/terrain.tscn" id="5_e7jt7"]
[ext_resource type="PackedScene" uid="uid://crsgow6lidtx4" path="res://Scenes/gate.tscn" id="5_j3jxd"]
[ext_resource type="PackedScene" uid="uid://dsadqsff76t3" path="res://Scenes/ExitButton.tscn" id="8_5ssy1"]

[sub_resource type="Animation" id="Animation_yldgl"]
resource_name = "MainMenuEntry"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tweets:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(0.164939, 1, 1),
"update": 0,
"values": [Vector2(400, 800), Vector2(400, 564), Vector2(400, 564)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tweets")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_switch_tweet"
}]
}

[sub_resource type="Animation" id="Animation_5k4wp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tweets:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 900)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbh6x"]
_data = {
"MainMenuEntry": SubResource("Animation_yldgl"),
"RESET": SubResource("Animation_5k4wp")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrtnh"]
bg_color = Color(0.0745098, 0.0823529, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.172549, 0.2, 0.247059, 1)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e80f7"]
bg_color = Color(0.145098, 0.447059, 0.929412, 1)
border_color = Color(0.505882, 0.564706, 0.647059, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nknvq"]
bg_color = Color(0.381158, 0.608946, 0.983391, 1)
border_color = Color(0.505882, 0.564706, 0.647059, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ay0k"]
bg_color = Color(0.0953874, 0.375265, 0.813801, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_qis13"]
resource_name = "Exit"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(406, 72), Vector2(431, -500), Vector2(406, -500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tweets:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("Terrain:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.384314, 0.435294, 0.498039, 0.231373), Color(0.384314, 0.435294, 0.498039, 0.231373), Color(0.384314, 0.435294, 0.498039, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_switch_level"
}]
}

[sub_resource type="Animation" id="Animation_b0aeq"]
resource_name = "LauncherAnim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(406, -500), Vector2(406, 72)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_start_anim"
}]
}

[sub_resource type="Animation" id="Animation_hpt3u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(431, -500)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43eop"]
_data = {
"Exit": SubResource("Animation_qis13"),
"LauncherAnim": SubResource("Animation_b0aeq"),
"RESET": SubResource("Animation_hpt3u")
}

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeh46")
next_level = ExtResource("2_ub1xv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -120)
rotation = -0.00396732
stream = ExtResource("3_cyb41")
volume_db = -56.147
autoplay = true

[node name="BgTemplate" parent="." instance=ExtResource("1_70xfw")]
layout_mode = 1

[node name="Terrain" parent="." instance=ExtResource("5_e7jt7")]
layout_mode = 1
offset_top = 0.0
offset_bottom = 0.0

[node name="Tweets" parent="." instance=ExtResource("2_3yv4w")]
visibility_layer = 1023
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 400.0
offset_top = 900.0
offset_right = 880.0
offset_bottom = 1026.0
grow_horizontal = 1
grow_vertical = 1
rotation = -0.00700772

[node name="TweetAnimationPlayer" type="AnimationPlayer" parent="Tweets"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_mbh6x")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 431.0
offset_top = -500.0
offset_right = 891.0
offset_bottom = -26.001
grow_horizontal = 2
grow_vertical = 2
rotation = -0.004569
theme_override_styles/panel = SubResource("StyleBoxFlat_xrtnh")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
z_index = 48
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Gate" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_j3jxd")]
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.866667, 0.396078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_urr22")
theme_override_font_sizes/font_size = 16
text = "the"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LastServer" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.866667, 0.396078, 1)
theme_override_fonts/font = ExtResource("3_urr22")
theme_override_font_sizes/font_size = 36
text = " Last Server"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Launch" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.986752, 0.986752, 0.986752, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.99, 0.99, 0.99, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_e80f7")
theme_override_styles/hover = SubResource("StyleBoxFlat_nknvq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6ay0k")
text = "Request Acccess"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Exit2" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("8_5ssy1")]
layout_mode = 2

[node name="MainMenuAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_43eop")
}
autoplay = "LauncherAnim"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Launch" to="." method="_on_launch_pressed"]
